// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popper test trigger click 1`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="position: absolute;"
  />,
]
`;

exports[`Popper test trigger click 2`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    data-popper-escaped=""
    data-popper-placement="top"
    data-popper-reference-hidden=""
    style="position: absolute; left: 0px; top: 0px; margin: 0px; z-index: 1001; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger click 3`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="z-index: 1001; position: absolute;"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%; display: none;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger contextMenu 1`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="position: absolute;"
  />,
]
`;

exports[`Popper test trigger contextMenu 2`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    data-popper-escaped=""
    data-popper-placement="top"
    data-popper-reference-hidden=""
    style="position: absolute; left: 0px; top: 0px; margin: 0px; z-index: 1002; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger contextMenu 3`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="z-index: 1002; position: absolute;"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%; display: none;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger focus 1`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="position: absolute;"
  />,
]
`;

exports[`Popper test trigger focus 2`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    data-popper-escaped=""
    data-popper-placement="top"
    data-popper-reference-hidden=""
    style="position: absolute; left: 0px; top: 0px; margin: 0px; z-index: 1003; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger focus 3`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="z-index: 1003; position: absolute;"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%; display: none;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger hover 1`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="position: absolute;"
  />,
]
`;

exports[`Popper test trigger hover 2`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    data-popper-escaped=""
    data-popper-placement="top"
    data-popper-reference-hidden=""
    style="position: absolute; left: 0px; top: 0px; margin: 0px; z-index: 1000; bottom: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;

exports[`Popper test trigger hover 3`] = `
Array [
  <button
    id="btn"
  >
    button
  </button>,
  <div
    class="xl-popper"
    style="z-index: 1000; position: absolute;"
  >
    <div
      class="xl-popper__inner"
      data-placement="top"
      style="position: relative; transform-origin: 0px 100%; display: none;"
    >
      <div>
        popup
      </div>
    </div>
  </div>,
]
`;
